@startuml Computer Catalog & Composition ER Diagram

!theme plain
skinparam linetype ortho

entity "Manufacturers" as Manufacturers {
    + Id : INT <<PK>>
    --
    Name : NVARCHAR(100) <<UNIQUE>>
    CreatedAt : DATETIMEOFFSET
    UpdatedAt : DATETIMEOFFSET
}

entity "DeviceCategories" as DeviceCategories {
    + Id : INT <<PK>>
    --
    Name : NVARCHAR(80) <<UNIQUE>>
    Description : NVARCHAR(255)
}

entity "ComponentTypes" as ComponentTypes {
    + Id : INT <<PK>>
    --
    Name : NVARCHAR(50) <<UNIQUE>>
    DisplayName : NVARCHAR(80)
    SortOrder : INT
}

entity "ComponentCatalogItems" as ComponentItems {
    + Id : INT <<PK>>
    --
    ComponentTypeId : INT <<FK>>
    ManufacturerId : INT <<FK>>
    ModelName : NVARCHAR(255)
    SpecSummary : NVARCHAR(255)
    NormalizedValue : DECIMAL(18,4)
    Unit : NVARCHAR(30)
    MetadataJson : NVARCHAR(MAX)
}

entity "CatalogProducts" as CatalogProducts {
    + Id : UNIQUEIDENTIFIER <<PK>>
    --
    DeviceCategoryId : INT <<FK>>
    ProductName : NVARCHAR(150)
    Sku : NVARCHAR(100)
    BaseWeightKg : DECIMAL(10,2)
    PerformanceTier : NVARCHAR(50)
    IsActive : BIT
}

entity "ProductComponentSelections" as ProductSelections {
    + Id : BIGINT <<PK>>
    --
    CatalogProductId : UNIQUEIDENTIFIER <<FK>>
    ComponentTypeId : INT <<FK>>
    ComponentCatalogItemId : INT <<FK>>
    Quantity : INT
    SlotLabel : NVARCHAR(100)
    DisplayOrder : INT
    StandardValue : DECIMAL(18,4)
    Unit : NVARCHAR(30)
    IsRequired : BIT
}

entity "InventoryAssets" as InventoryAssets {
    + Id : UNIQUEIDENTIFIER <<PK>>
    --
    CatalogProductId : UNIQUEIDENTIFIER <<FK>>
    AssetTag : NVARCHAR(100)
    SerialNumber : NVARCHAR(100)
    AssetName : NVARCHAR(255)
    AssignedTo : NVARCHAR(150)
    PhysicalLocation : NVARCHAR(150)
    Status : NVARCHAR(50)
}

Manufacturers ||--o{ ComponentItems : "makes"
ComponentTypes ||--o{ ComponentItems : "classifies"
DeviceCategories ||--o{ CatalogProducts : "groups"
CatalogProducts ||--o{ ProductSelections : "is composed of"
ComponentTypes ||--o{ ProductSelections : "fills slot"
ComponentItems ||--o{ ProductSelections : "selected item"
CatalogProducts ||--o{ InventoryAssets : "instantiated as"

@enduml
